# hafas-rs

./: .env  .gitignore  Cargo.toml  README.md  sqlx-data.json
book-doc/: book.toml
book-doc-de/: book.toml
book-doc-de/src/: SUMMARY.md  about.md  database-cli.md  future.md  goals.md  hafas-wrap.md  hafas.md  installation.md  structure.md  usage.md
book-doc/src/: SUMMARY.md  about.md  database-cli.md  future.md  goals.md  hafas-wrap.md  hafas.md  installation.md  structure.md  usage.md
database-cli/: Cargo.toml  README.md
database-cli/migrations/: 2022_12_21_1_init.sql
database-cli/src/: compare_raw_data.rs  count_location_trips.rs  create_heatmap_diagram.rs  main.rs  parse_raw_jids.rs  request_raw_jids.rs
database-cli/src/util/: database.rs  logging.rs  mod.rs
doc/: settings.html  source-files.js
doc/database_cli/: fn.main.html  index.html
doc/hafas_wrap/: index.html  macro.define_request.html  sidebar-items.js  struct.Client.html
docs/: Präsentationsfolien.key  search-index.js
docs/book-de/: 404.html  about.html  database-cli.html  future.html  goals.html  hafas-wrap.html  hafas.html  index.html  installation.html  print.html  (+4 more)
hafas-wrap/: Cargo.toml  README.md  index.html
hafas-wrap/src/: hafas_profiles.rs  lib.rs  util.rs
hafas-wrap/src/methods/: him_search.rs  journey_detail.rs  journey_match.rs  mod.rs
hafas-wrap/src/methods/sub_types/: common.rs  journey.rs  mod.rs
presentation-examples/: class-definition.java  class-definition.rs  function-definition.java  function-definition.rs  inheritance.java  inheritance.rs  oop-in-rust.rs
(+203 files in other folders)
