[package]
name = "hafas-wrap"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = [] }
serde_with = "2.1"
lazy_static = "1.4"
serde_json = "1.0"
thiserror = "1.0"
openssl = "0.10"
base64 = "0.13"
chrono = "0.4"
